--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,157 +1,187 @@
-:root {
-  /*Colors*/
-  --first-color: #3595b3;
-  --first-color-dark: #136077;
-  --second-color-: #A49EAC;
-  --second-color-light: #fff;
-
-  /*Font and typography*/
-  --h1-font-size: 1.5rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-}
-
-a {
-  text-decoration: none;
-}
-
-/*LOGIN*/
-.login {
-  display: grid;
-  grid-template-columns: 100%;
-  height: 100vh;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-  justify-content: center;
-  align-items: center;
-}
-
-.login__content {
-  display: grid;
-}
-
-.login__forms {
-  position: relative;
-  height: 368px;
-}
-
-.login__registre,
-.login__create {
-  position: absolute;
-  bottom: 1rem;
-  width: 100%;
-  background-color: var(--second-color-light);
-  padding: 2rem 1rem;
-  border-radius: 1rem;
-  text-align: center;
-  box-shadow: 0 8px 20px rgba(27, 118, 134, 0.2);
-}
-
-
-.login__title {
-  font-size: var(--h1-font-size);
-  margin-bottom: 2rem;
-}
-
-.login__box {
-  display: grid;
-  grid-template-columns: max-content 1fr;
-  column-gap: .5rem;
-  padding: 1.125rem 1rem;
-  background-color: #FFF;
-  margin-top: 1rem;
-  border-radius: .5rem;
-}
-
-.login__icon {
-  font-size: 1.5rem;
-  color: var(--first-color);
-}
-
-.login__input {
-  border: none;
-  outline: none;
-  font-size: var(--normal-font-size);
-  font-weight: 700;
-  color: var(--first-color-dark);
-}
-
-.login__input::placeholder {
-  font-size: var(--normal-font-size);
-  font-family: var(--body-font);
-  color: var(--second-color);
-}
-
-.login__forgot {
-  display: block;
-  width: max-content;
-  margin-left: auto;
-  margin-top: .5rem;
-  font-size: var(--small-font-size);
-  font-weight: 600;
-  color: var(--second-color);
-}
-
-.login__button {
-  display: block;
-  padding: 1rem;
-  margin: 2rem 0;
-  background-color: var(--first-color);
-  color: #FFF;
-  font-weight: 600;
-  text-align: center;
-  border-radius: .5rem;
-  transition: .3s;
-}
-
-.login__button:hover {
-  background-color: var(--first-color-dark);
-}
-
-.login__account,
-.login__signin,
-.login__signup {
-  font-weight: 600;
-  font-size: var(--small-font-size);
-}
-
-.login__account {
-  color: var(--first-color-dark);
-}
-
-.login__signin,
-.login__signup {
-  color: var(--first-color);
-  cursor: pointer;
-}
-
-/*Show login*/
-.block {
-  display: block;
-}
-
-/*Hidden login*/
-.none {
-  display: none;
-}
-
-/* media*/
-@media screen and (min-width: 500px) {
-  .login__forms {
-    width: 348px;
-    justify-self: center;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .login__forms {
-    width: 250px;
-    justify-self: center;
-  }
-}
-@media screen and (min-width: 768px) {
+  /* --first-color: #1e7f9c;
+  --first-color-dark: #136077; */
   :root {
-    --normal-font-size: 1rem;
-    --small-font-size: .875rem;
+    /*Colors*/
+    --first-color: #9D4BFF;
+    --first-color-dark: #23004D;
+    --second-color: #A49EAC;
+    --second-color-light: #F2F2F2;
+
+    /*Font and typography*/
+    --h1-font-size: 1.5rem;
+    --normal-font-size: .938rem;
+    --small-font-size: .813rem;
   }
-}
+
+  a {
+    text-decoration: none;
+  }
+
+  /*LOGIN*/
+  .login {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin-left: -7%;
+  }
+
+  .login__content {
+    display: grid;
+  }
+
+  .login__icon {
+    font-size: 1.5rem;
+    margin-right: 5px;
+    color: var(--first-color);
+  }
+
+
+  .login__forms {
+    position: relative;
+    height: 450px;
+  }
+
+  .login__registre {
+    position: absolute;
+    bottom: 1rem;
+    width: 100%;
+    background-color: var(--second-color-light);
+    padding: 2rem 1rem;
+    text-align: center;
+    box-shadow: 0 8px 20px rgba(35, 0, 77, .2);
+  }
+
+  .login__create {
+    bottom: 1rem;
+    width: 100%;
+    background-color: var(--second-color-light);
+    padding: 2rem 1rem;
+    text-align: center;
+    box-shadow: 0 10px 20px rgba(27, 118, 134, 0.2);
+    justify-content: center;
+    align-items: center;
+    margin-top: -20%;
+    margin-bottom: 10%;
+  }
+
+  .login__title {
+    font-size: var(--h1-font-size);
+    margin-bottom: 2rem;
+  }
+
+  .login__box {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    column-gap: .5rem;
+    padding: 1.125rem 1rem;
+    background-color: #FFF;
+    margin-top: 1rem;
+    border-radius: .5rem;
+  }
+
+  .login__icon {
+    font-size: 1.5rem;
+    color: var(--first-color);
+  }
+
+  .login__input {
+    border: none;
+    outline: none;
+    font-size: var(--normal-font-size);
+    font-weight: 700;
+    color: var(--first-color-dark);
+
+  }
+
+  .login__input::placeholder {
+    font-size: var(--normal-font-size);
+    font-family: var(--body-font);
+    color: var(--second-color);
+  }
+
+  .login__forgot {
+    display: block;
+    width: max-content;
+    margin-left: auto;
+    margin-top: .5rem;
+    font-size: var(--small-font-size);
+    font-weight: 600;
+    color: var(--second-color);
+  }
+
+  .login__button {
+    display: block;
+    padding: 1rem;
+    margin: 2rem 0;
+    background-color: var(--first-color);
+    color: #FFF;
+    font-weight: 600;
+    text-align: center;
+    border-radius: .5rem;
+    transition: .3s;
+  }
+
+  .login__button:hover {
+    background-color: var(--first-color-dark);
+  }
+
+  .login__account,
+  .login__signin,
+  .login__signup {
+    font-weight: 600;
+    font-size: var(--small-font-size);
+  }
+
+  .login__account {
+    color: var(--first-color-dark);
+  }
+
+  .login__signin,
+  .login__signup {
+    color: var(--first-color);
+    cursor: pointer;
+  }
+
+  /*Show login*/
+  .block {
+    display: block;
+  }
+
+  /*Hidden login*/
+  .none {
+    display: none;
+  }
+
+  /* media*/
+  @media screen and (min-width: 500px) {
+    .login__forms {
+      width: 348px;
+      justify-self: center;
+    }
+  }
+
+  @media screen and (max-width: 550px) {
+    .login__forms {
+      width: 70%;
+      margin: auto;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .login__forms {
+      width: 70%;
+      margin: auto;
+      margin-left: -1%;
+      margin-left: 13%;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    :root {
+      --normal-font-size: 1rem;
+      --small-font-size: .875rem;
+    }
+  }
